<resources>
    <string name="app_name">Tongue Twisters - The Pronunciation App</string>

    <string name="ad_app_id" translatable="false">ca-app-pub-8103354595257586~5155276805</string>

    <string name="reading_activity_interstitial_ad" translatable="false">
        ca-app-pub-8103354595257586/6089542308
    </string>
    <string name="ad_test_banner_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-8103354595257586/8711378438</string>

    <string name="ad_test_native_id" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="native_ad_unit_id" translatable="false">ca-app-pub-8103354595257586/6477914644</string>

    <string name="ad_test_full_screen_native_ad">ca-app-pub-3940256099942544/2247696110</string>
    <string name="ad_full_screen_native_ad">ca-app-pub-8103354595257586/5877960055</string>

    <string name="test_interstitial_ad" translatable="false">
        ca-app-pub-3940256099942544/1033173712
    </string>

    <string name="samsung_afifty_global_device_id" translatable="false">74571B45624EA85653BFE56B0398FAE1</string>

    <string name="loading">LOADING…</string>
    <string name="app_name_caps">TONGUE TWISTERS</string>
    <string name="you_are_a">YOU ARE A</string>
    <string name="free_user">FREE USER</string>
    <string name="upgrade_to">UPGRADE TO</string>
    <string name="premium">PREMIUM</string>
    <string name="twister_of_the_day">Twister of the <b>Day:</b></string>
    <string name="twisters_by_length">Twisters by <b>Length:</b></string>
    <string name="twisters_by_difficulty">Twisters by <b>Difficulty:</b></string>
    <string name="dummy_twister_detail">Level 2 - Twister 7</string>
    <string name="dummy_twister_day_name">27 June, 2019</string>
    <string name="dummy_tongue_twister">Peter Piper picked a peck of pickled peppers. Did Peter Piper pick a peck of pickled peppers?\n\nIf Peter Piper picked a peck of pickled peppers, Where’s the peck of pickled peppers Peter Piper picked?\n\nPeter Piper picked a peck of pickled peppers. Did Peter Piper pick a peck of pickled peppers?\n\nIf Peter Piper picked a peck of pickled peppers, Where’s the peck of pickled peppers Peter Piper picked?\n\nPeter Piper picked a peck of pickled peppers. Did Peter Piper pick a peck of pickled peppers?\n\nIf Peter Piper picked a peck of pickled peppers, Where’s the peck of pickled peppers Peter Piper picked?</string>
    <string name="dummy_tongue_twister_short">Peter Piper picked a peck of pickled peppers.</string>
    <string name="play">PLAY NOW</string>
    <string name="dummy_twister_by_length_header">SMALL</string>
    <string name="dummy_twister_name">Peter Piper</string>
    <string name="dummy_twisters_count_length">140+ twisters</string>
    <string name="show_all">SHOW ALL</string>
    <string name="dummy_level_by_difficulty">LEVEL 1</string>
    <string name="dummy_difficulty_level_name">Just Lit Up</string>
    <string name="dummy_twister_count_difficulty">65 Twisters</string>
    <string name="dummy_read_to_total_ratio">23/65</string>
    <string name="twisters">Twisters</string>
    <string name="open">OPEN</string>
    <string name="free_twister_of_the_day">Here is your free twister of the Day.</string>
    <string name="hi_there">Hi There!</string>
    <string name="play_now_caps">PLAY NOW</string>
    <string name="twisters_by_home_header">Twisters by</string>
    <string name="length_header_home">Length</string>
    <string name="dummy_twister_header">Peter Piper</string>

    <string name="small_length_caps">SMALL</string>
    <string name="medium_length_caps">MEDIUM</string>
    <string name="long_length_caps">LONG</string>

    <string name="difficulty_header_home">Difficulty</string>
    <string name="twister_type_free">FREE</string>
    <string name="twister_type_paid">OPEN</string>

    <string name="first_item_reached">You are already at the first twister.</string>
    <string name="last_item_reached">You are already at the last twister.</string>

    <string name="tathastu_subscribe_bitly_link">http://bit.ly/TathastuSubscribe</string>
    <string name="subscribe_tathastu_prompt">SUBSCRIBE</string>
    <string name="tathastu_subscribe_help_description">We are working hard to scale our YouTube channel named Tathastu.\n\nWe would be thankful if you contribute by subscribing to it.\n\nThank you for the support.</string>
    <string name="tathastu_subscribe_help_header">We need your help!</string>
    <string name="tathastu_subscribe_help_indicator">Hey Buddy,</string>
    <string name="please_subscribe_toast_text">Please Subscribe. Thank You!</string>

    <string name="dummy_ad_app_description">Indian Constitution is a wonderful app for law students and the general public to know about the world\'s longest constitution.</string>
    <string name="dummy_install_app_name">Indian Constitution</string>
    <string name="dummy_install_app_rating">4.4</string>
    <string name="free">FREE</string>
    <string name="dummy_call_to_action">GET STARTED</string>

    <string name="continue_playing">Continue Playing</string>
    <string name="difficulty_s_twisters">difficulty %s twisters</string>
    <string name="s_length_twisters">%s length twisters</string>
    <string name="difficulty_level_number">LEVEL %s</string>
    <string name="continue_where_you_left">Continue where you left</string>
    <string name="a_suggestion_from_list">Here\'s a suggestion for you</string>
    <string name="amplitude_api_key">ebe2d2729feb3d66dbf4c436b499cfc0</string>

    <string name="notification_description_heads_up">Hello buddy! Here is a new tongue twister for you called %s! Click here and check it out!</string>
    <string name="notification_description_compact">Click to check out %s! A new tongue twister for you!</string>
    <string name="notification_description_expanded">Hello buddy! Here is a new tongue twister for you called %s! Click here and check it out!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
