<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidUnknownAttribute -->
<com.google.android.gms.ads.nativead.NativeAdView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/unifiedAdViewHolder"
    android:background="@color/white"
    android:visibility="gone"
    android:orientation="vertical"
    tools:visibility="visible">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/skeleton_zero"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            tools:background="@drawable/bg_image_placeholder"
            tools:ignore="ContentDescription"
            tools:visibility="visible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/appNumbersHolder"
            android:id="@+id/installAppIconIv"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:layout_marginStart="14sp"
            tools:textStyle="bold"
            android:lines="1"
            android:ellipsize="end"
            fontPath="fonts/Montserrat-SemiBold.ttf"
            app:layout_constraintTop_toTopOf="@id/installAppIconIv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/appNumbersHolder"
            tools:text="@string/dummy_install_app_name"
            app:layout_constraintVertical_chainStyle="spread"
            android:textSize="@dimen/font_16_sp"
            android:textColor="@color/skeleton_seven"
            app:layout_constraintStart_toEndOf="@id/installAppIconIv"
            android:id="@+id/installAppTitleTv"
            tools:ignore="MissingPrefix" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14sp"
            app:layout_constraintTop_toBottomOf="@id/installAppTitleTv"
            app:layout_constraintBottom_toBottomOf="@id/installAppIconIv"
            app:layout_constraintStart_toEndOf="@id/installAppIconIv"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/appNumbersHolder"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_16_sp"
                android:text="@string/dummy_install_app_rating"
                fontPath="fonts/Montserrat-Medium.ttf"
                android:textColor="@color/skeleton_five"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/installAppNumericRatingTv"
                tools:ignore="MissingPrefix" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="@dimen/padding_6_dp"
                android:src="@drawable/ic_star_filled"
                app:tint="#F8C200"
                app:layout_constraintStart_toEndOf="@id/installAppNumericRatingTv"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="ContentDescription"
                android:id="@+id/installAppStaticRatingIv"/>

            <ImageView
                android:layout_width="2dp"
                android:layout_height="0dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginStart="@dimen/padding_10_dp"
                android:background="@color/skeleton_two"
                app:layout_constraintStart_toEndOf="@id/installAppStaticRatingIv"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="ContentDescription"
                android:id="@+id/installAppNumericRatingSeparatorIv"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_16_dp"
                tools:textSize="@dimen/font_16_sp"
                android:textAlignment="viewStart"
                fontPath="fonts/Montserrat-Medium.ttf"
                android:text="@string/free"
                android:textColor="#318603"
                app:layout_constraintStart_toEndOf="@id/installAppNumericRatingSeparatorIv"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/freeIndicatorTv"
                tools:ignore="MissingPrefix" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/appNumbersHolder"
            app:layout_constraintBottom_toTopOf="@id/callToActionTv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/skeleton_three"
            android:textSize="@dimen/font_14_sp"
            android:layout_marginTop="@dimen/padding_16_dp"
            tools:text="@string/dummy_ad_app_description"
            tools:ignore="UnusedAttribute"
            android:id="@+id/installAppDescriptionTv"
            android:visibility="gone"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_call_to_action"
            android:background="@drawable/bg_call_to_action_day_twister"
            android:gravity="center"
            tools:textStyle="bold"
            fontPath="fonts/Montserrat-Bold.ttf"
            android:textColor="@color/white"
            android:textSize="@dimen/font_16_sp"
            android:paddingTop="@dimen/padding_10_dp"
            android:paddingBottom="@dimen/padding_10_dp"
            android:layout_marginTop="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/installAppDescriptionTv"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/callToActionTv"
            tools:ignore="MissingPrefix" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.gms.ads.nativead.NativeAdView>